(saterfiel) adding missing routes for exams and prescriptions along with delete calls for prescriptions and exam
