# api/src/model_detail_response.go
@@ -13,7 +13,8 @@ type DetailResponse struct {
 	Photo            string `json:"photo"`
 	Details          string `json:"details"`
 	DetailsEditable  bool   `json:"detailsEditable"`
-	ChatURL          string `json:"chatURL"`
-	RelatedItemsURL  string `json:"relatedItemsURL"`
-	UpdateURL        string `json:"updateURL"`
+	ChatURL          string `json:"chatURL,omitempty"`
+	RelatedItemsURL  string `json:"relatedItemsURL,omitempty"`
+	UpdateURL        string `json:"updateURL,omitempty"`
+	DeleteURL        string `json:"deleteURL,omitempty"`
 }
